# litmath

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: math.hpp
test/: CMakeLists.txt  add_test.cpp  divide_test.cpp  factorial_test.cpp  multiply_test.cpp  pow_test.cpp  subtract_test.cpp
